--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ VUE_APP_PREVIEW=true
 VUE_APP_API_BASE_URL=/v1/rbac/mgt
 VUE_APP_API_BASE_URL_LOGIN=/v1
 VUE_APP_API_BASE_URL_INDFO=/v1/rbac/api
+VUE_APP_PROXY_TARGET='http://zt.127867.com:30104'
